--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "cSpell.words": [
         "libsqlite"
-    ]
+    ],
+    "files.associations": {
+        "*.embeddedhtml": "html",
+        "iomanip": "cpp",
+        "iostream": "cpp"
+    }
 }
