--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,6 +8,7 @@
                 "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
+                "-lsqlite3",
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
             ],
